--- a/index.html
+++ b/index.html
@@ -6,54 +6,57 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <link rel="stylesheet" href="./css/main.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@200;300&display=swap" rel="stylesheet">
 
   <title>Refatorando Código</title>
 </head>
 <body>
   <div class="container">				   
-              <div class="options">
+              <!-- <div class="options">
                 <button class="button__options">Cadastro</button>
                 <button class="button__options">Contato</button>
-              </div>
-    <div class="form-container">
-                <form action="" name="form__register" class="active">
+              </div> -->
+
+    <div class="form__container">
+                <form action="" name="form__register" class="form__register">
                   <h1 class="title__register">Cadastro</h1>
-
                   <div class="form__group">
-                    <label for="name" class="name">Nome</label>
-                    <input type="text" class="form__control"  placeholder="Nome" id="name" name="name">
+                    <label for="name" class="label__form">Nome</label>
+                    <input type="text" class="form__control"  id="name" name="name">
                   </div>
 
                   <div class="form__group">
-                    <label for="company" class="company">Nome da Empresa</label>
-                    <input type="text" class="form__control"  placeholder="Nome da Empresa" id="company" name="company">
+                    <label for="company" class="label__form">Nome da Empresa</label>
+                    <input type="text" class="form__control"  id="company" name="company">
                   </div>
 
                   <div class="form__group">
-                    <label for="email" class="email">E-mail</label>
-                    <input type="text" class="form__control" placeholder="E-mail"  id="email" name="email">
+                    <label for="email" class="label__form">E-mail</label>
+                    <input type="text" class="form__control"  id="email" name="email">
                   </div>
                   
-                  <div class="form-group">
-                    <label for="telephone" class="telephone">Telefone</label>
-                    <input type="text" placeholder="Telefone" class="form__control" id="telephone" name="telephone">
+                  <div class="form__group">
+                    <label for="telephone" class="label__form">Telefone</label>
+                    <input type="text" class="form__control" id="telephone" name="telephone">
                   </div>
 
-                  <div class="form-group">
-                    <label for="message" class="message">Mensagem</label>
-                    <textarea placeholder="Mensagem" class="form__control" id="message" name="message"></textarea>
+                  <div class="form__group message">
+                    <label for="message" class="label__form--message">Mensagem</label>
+                    <textarea kr="Mensagem" class="form__control--message" id="message" name="message"></textarea>
                   </div>
 
-                  <button type="submit" class="button">Enviar <i class="fa fa-paper-plane"></i>
+                  <button type="submit" class="button__register">Enviar <i class="fa fa-paper-plane"></i>
                   </button>
 
                 </form>
 
-                <form action="" name="form__contact">
+                <!-- <form action="" name="form__contact">
                   <h1 class="title__contact">Contato</h1>
                   <div class="form__group">
                     <label for="contact__form" class="contact__form">Nome</label>
-                    <input type="text" name="contact" placeholder="Nome" class="form__control" id="contact__form">
+                    <input type="text" name="contact" kr="Nome" class="form__control" id="contact__form">
                   </div>
 
                   <div class="form__group">
@@ -79,7 +82,7 @@
                   <button class="btn" type="submit">Enviar <i class=" fa fa-paper-plane"></i>
                   </button>
                 </form>
-              </div>            
+              </div>             -->
       </div>
 </body>
 </html>
