--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                   <div class="form__group message">
                     <label for="message" class="label__form--message">Mensagem</label>
-                    <textarea kr="Mensagem" class="form__control--message" id="message" name="message"></textarea>
+                    <textarea class="form__control--message" id="message" name="message"></textarea>
                   </div>
 
                   <button type="submit" class="button__register">Enviar <i class="fa fa-paper-plane"></i>
