--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 </head>
 <body>
   <div class="container">				   
-              <!-- <div class="options">
+              <div class="options">
                 <button class="button__options">Cadastro</button>
                 <button class="button__options">Contato</button>
-              </div> -->
+              </div>
 
-    <div class="form__container">
+    <!-- <div class="form__container">
       <form action="" name="form__register" class="form__register">
         <h1 class="title__form">Cadastro</h1>
         <div class="form__group">
@@ -83,7 +83,7 @@
       </button>
     </form>
   </div>     
-    </div>            
+    </div>             -->
       </div>
 </body>
 </html>
