--- a/index.html
+++ b/index.html
@@ -19,32 +19,27 @@
                 <button class="button__options">Contato</button>
               </div>
 
-    <!-- <div class="form__container">
+    <div class="form__container">
       <form action="" name="form__register" class="form__register">
         <h1 class="title__form">Cadastro</h1>
         <div class="form__group">
-          <label for="name" class="label__form">Nome</label>
-          <input type="text" class="form__control"  id="name" name="name">
+          <input aria-label="Nome" placeholder="Nome" type="text" class="form__control"  id="name" name="name">
         </div>
 
         <div class="form__group">
-          <label for="company" class="label__form">Nome da Empresa</label>
-          <input type="text" class="form__control"  id="company" name="company">
+          <input type="text" aria-label="Nome" placeholder="Nome da Empresa" class="form__control"  id="company" name="company">
         </div>
 
         <div class="form__group">
-          <label for="email" class="label__form">E-mail</label>
-          <input type="text" class="form__control"  id="email" name="email">
+          <input type="text" aria-label="E-mail" placeholder="E-mail" class="form__control"  id="email" name="email">
         </div>
         
         <div class="form__group">
-          <label for="telephone" class="label__form">Telefone</label>
-          <input type="text" class="form__control" id="telephone" name="telephone">
+          <input type="text" aria-label="Telefone" placeholder="Telefone" class="form__control" id="telephone" name="telephone">
         </div>
 
         <div class="form__group message">
-          <label for="message" class="label__form--message">Mensagem</label>
-          <textarea class="form__control--message" id="message" name="message"></textarea>
+          <textarea aria-label="Mensagem" placeholder="Mensagem" class="form__control--message" id="message" name="message"></textarea>
         </div>
 
         <button type="submit" class="button__register">Enviar <i class="fa fa-paper-plane"></i>
@@ -55,35 +50,30 @@
     <form action="" name="form__contact">
       <h1 class="title__form">Contato</h1>
       <div class="form__group">
-        <label for="contact__form" class="label__form">Nome</label>
-        <input type="text" name="contact" kr="Nome" class="form__control" id="contact__form">
+        <input type="text" aria-label="Nome" placeholder="Nome" name="contact" kr="Nome" class="form__control" id="contact__form">
       </div>
 
       <div class="form__group">
-        <label for="contact__company" class="label__form">Nome da Empresa</label>
-        <input type="text" name="company" class="form__control" id="contact__company" >
+        <input type="text" aria-label="Nome da Empresa" placeholder="Nome da Empresa" name="company" class="form__control" id="contact__company" >
       </div>
 
       <div class="form__group">
-        <label for="contact__email" class="label__form">E-mail</label>
-        <input type="text" class="form__control"   id="contact__email" name="email">
+        <input type="text" aria-label="E-mail" placeholder="E-mail" class="form__control"   id="contact__email" name="email">
       </div>
 
       <div class="form__group">
-        <label for="contact__telephone" class="label__form">Telefone</label>
-        <input type="text" class="form__control" id="contact__telephone" name="telephone">
+        <input type="text" aria-label="Telefone" placeholder="Telefone" class="form__control" id="contact__telephone" name="telephone">
       </div>
 
       <div class="form__group">
-        <label for="contact__message" class="label__form--message">Mensagem</label>
-        <textarea  class="form__control--message"   id="contact__message" name="message"></textarea>
+        <textarea  class="form__control--message" aria-label="Mensagem" placeholder="Mensagem"  id="contact__message" name="message"></textarea>
       </div>
 
       <button class="button__register" type="submit">Enviar   <i class=" fa fa-paper-plane"></i>
       </button>
     </form>
   </div>     
-    </div>             -->
+    </div>            
       </div>
 </body>
 </html>
