--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
 </head>
 <body>
   <div class="container">				   
-              <div class="options">
-                <button class="button__options">Cadastro</button>
-                <button class="button__options">Contato</button>
-              </div>
-
+    <div class="options">
+      <button class="button__options">Cadastro</button>
+      <button class="button__options">Contato</button>
+    </div> 
     <div class="form__container">
-      <form action="" name="form__register" class="form__register">
+      <form action="" name="form__register " class="active">
         <h1 class="title__form">Cadastro</h1>
         <div class="form__group">
           <input aria-label="Nome" placeholder="Nome" type="text" class="form__control"  id="name" name="name">
@@ -46,34 +45,34 @@
         </button>
 
       </form>
-  <div class="form__contact"> 
-    <form action="" name="form__contact">
-      <h1 class="title__form">Contato</h1>
-      <div class="form__group">
-        <input type="text" aria-label="Nome" placeholder="Nome" name="contact" kr="Nome" class="form__control" id="contact__form">
-      </div>
 
-      <div class="form__group">
-        <input type="text" aria-label="Nome da Empresa" placeholder="Nome da Empresa" name="company" class="form__control" id="contact__company" >
-      </div>
+      <form action="" name="form__contact">
+        <h1 class="title__form">Contato</h1>
+        <div class="form__group">
+          <input type="text" aria-label="Nome" placeholder="Nome" name="contact" kr="Nome" class="form__control" id="contact__form">
+        </div>
 
-      <div class="form__group">
-        <input type="text" aria-label="E-mail" placeholder="E-mail" class="form__control"   id="contact__email" name="email">
-      </div>
+        <div class="form__group">
+          <input type="text" aria-label="Nome da Empresa" placeholder="Nome da Empresa" name="company" class="form__control" id="contact__company" >
+        </div>
 
-      <div class="form__group">
-        <input type="text" aria-label="Telefone" placeholder="Telefone" class="form__control" id="contact__telephone" name="telephone">
-      </div>
+        <div class="form__group">
+          <input type="text" aria-label="E-mail" placeholder="E-mail" class="form__control"   id="contact__email" name="email">
+        </div>
 
-      <div class="form__group">
-        <textarea  class="form__control--message" aria-label="Mensagem" placeholder="Mensagem"  id="contact__message" name="message"></textarea>
-      </div>
+        <div class="form__group">
+          <input type="text" aria-label="Telefone" placeholder="Telefone" class="form__control" id="contact__telephone" name="telephone">
+        </div>
 
-      <button class="button__register" type="submit">Enviar   <i class=" fa fa-paper-plane"></i>
-      </button>
-    </form>
-  </div>     
+        <div class="form__group">
+          <textarea  class="form__control--message" aria-label="Mensagem" placeholder="Mensagem"  id="contact__message" name="message"></textarea>
+        </div>
+
+        <button class="button__register" type="submit">Enviar   <i class=" fa fa-paper-plane"></i>
+        </button>
+      </form>
+          
     </div>            
-      </div>
+  </div>
 </body>
 </html>
