--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
   <div class="container">				   
     <div class="options">
-      <button class="button__options" data-button="register">Cadastro</button>
-      <button class="button__options active" data-button="contact" >Contato</button>
+      <button class="button--options" data-button="register">Cadastro</button>
+      <button class="button--options button--active" data-button="contact" >Contato</button>
     </div> 
     <div class="form__container">
       <form action="" class="form" data-form="register" name="form__register ">
@@ -41,7 +41,7 @@
           <textarea aria-label="Mensagem" placeholder="Mensagem" class="form__control--message" id="message" name="message"></textarea>
         </div>
 
-        <button type="submit" class="button__register">Enviar <i class="fa fa-paper-plane"></i>
+        <button type="submit" class="button--register">Enviar <i class="fa fa-paper-plane"></i>
         </button>
 
       </form>
@@ -68,7 +68,7 @@
           <textarea  class="form__control--message" aria-label="Mensagem" placeholder="Mensagem"  id="contact__message" name="message"></textarea>
         </div>
 
-        <button class="button__register" type="submit">Enviar   <i class=" fa fa-paper-plane"></i>
+        <button class="button--register" type="submit">Enviar   <i class=" fa fa-paper-plane"></i>
         </button>
       </form>
           
